--- a/index.html
+++ b/index.html
@@ -5,10 +5,20 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Omnious Productions | Design and Code in Web Technologies</title>
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-  <nav></nav>
-  <main></main>
+  <nav>
+    <img src="./img/omnio_us-logo.png" alt="omnio.us">
+    <button class="menubtn">
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
+    </button>
+  </nav>
+  <main>
+    <h1>omnio.us productions</h1>
+  </main>
   <footer></footer>
 </body>
 </html>
