ADD menu function

--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
       <div class="line"></div>
       <div class="line"></div>
     </button>
+    <div class="menu-slideout"></div>
   </nav>
   <main>
     <h1>omnio.us productions</h1>
   </main>
   <footer></footer>
+  <script src="./js/script.js"></script>
 </body>
 </html>
