ADD hero section start

--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
     <div class="menu-slideout"></div>
   </nav>
   <main>
-    <h1>omnio.us productions</h1>
+    <section class="hero">
+      <div class="img"></div>
+      <div class="text">
+        <h1>omnio.us productions</h1>
+        <h2>Keep your viewers attention</h2>
+      </div>
+    </section>
   </main>
   <footer></footer>
   <script src="./js/script.js"></script>
