--- a/index.html
+++ b/index.html
@@ -25,6 +25,20 @@
         <h2>Keep your viewers attention</h2>
       </div>
     </section>
+    <ul class="clients">
+      <li>
+        <img src="./img/logos/logo-nike-o.svg" alt="Nike" height="80">
+      </li>
+      <li>
+        <img src="./img/logos/logo-perrier-o.svg" alt="Perrier" height="80">
+      </li>
+      <li>
+        <img src="./img/logos/logo-canon-o.svg" alt="Canon" height="80">
+      </li>
+      <li>
+        <img src="./img/logos/logo-p_g-o.svg" alt="P&G" height="80">
+      </li>
+    </ul>
   </main>
   <footer></footer>
   <script src="./js/script.js"></script>
