MOD art and image updates

--- a/index.html
+++ b/index.html
@@ -27,10 +27,13 @@
     </section>
     <ul class="clients">
       <li>
-        <img src="./img/logos/logo-nike-o.svg" alt="Nike" height="80">
+        <img src="./img/logos/logo-poland_spring-o.svg" alt="Poland Spring" height="80">
       </li>
       <li>
         <img src="./img/logos/logo-perrier-o.svg" alt="Perrier" height="80">
+      </li>
+      <li>
+        <img src="./img/logos/logo-nike-o.svg" alt="Nike" height="80">
       </li>
       <li>
         <img src="./img/logos/logo-canon-o.svg" alt="Canon" height="80">
@@ -39,8 +42,30 @@
         <img src="./img/logos/logo-p_g-o.svg" alt="P&G" height="80">
       </li>
     </ul>
+    <section class="hero alt">
+      <div class="img"></div>
+      <div class="text">
+        <h2>Award winning digital</h2>
+        <button>See More</button>
+      </div>
+    </section>
+    <section class="hero">
+      <div class="img"></div>
+      <div class="text">
+        <h2>Creative Craft</h2>
+        <!-- <button>See More</button> -->
+      </div>
+    </section>
   </main>
-  <footer></footer>
+  <footer>
+    <ul class="buttons">
+      <li><a class="btn" href="/">design</a></li>
+      <li><a class="btn" href="/">code</a></li>
+      <li><a class="btn" href="/">art</a></li>
+      <li><a class="btn" href="/">sound</a></li>
+    </ul>
+    <p class="legal">Designed and Coded, by hand, by Ornette Coleman ©2024</p>
+  </footer>
   <script src="./js/script.js"></script>
 </body>
 </html>
