--- a/index.html
+++ b/index.html
@@ -64,7 +64,14 @@
       <li><a class="btn" href="/">art</a></li>
       <li><a class="btn" href="/">sound</a></li>
     </ul>
-    <p class="legal">Designed and Coded, by hand, by Ornette Coleman ©2024</p>
+    <section class="contact">
+      <ul class="social">
+        <li><a href="/"><img src="./img/icon/linkedin-op.svg" height="32" alt="LinkedIn"></a></li>
+        <li><a href="/"><img src="./img/icon/github-op.svg" height="32" alt="GitHub"></a></li>
+        <li><a href="/"><img src="./img/icon/file-op.svg" height="32" alt="Resume"></a></li>
+      </ul>
+      <p class="legal">Designed and Coded, by hand, by Ornette Coleman ©2024</p>
+    </section>
   </footer>
   <script src="./js/script.js"></script>
 </body>
