MOD add footer links

--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
     </ul>
     <section class="contact">
       <ul class="social">
-        <li><a href="/"><img src="./img/icon/linkedin-op.svg" height="32" alt="LinkedIn"></a></li>
-        <li><a href="/"><img src="./img/icon/github-op.svg" height="32" alt="GitHub"></a></li>
-        <li><a href="/"><img src="./img/icon/file-op.svg" height="32" alt="Resume"></a></li>
+        <li><a href="https://www.linkedin.com/in/ornettecoleman/" target="_blank"><img src="./img/icon/linkedin-op.svg" height="32" alt="LinkedIn"></a></li>
+        <li><a href="https://github.com/omniosi" target="_blank"><img src="./img/icon/github-op.svg" height="32" alt="GitHub"></a></li>
+        <li><a href="./files/resume_ornette-coleman_ux-engineer.pdf"><img src="./img/icon/file-op.svg" height="32" alt="Resume"></a></li>
       </ul>
       <p class="legal">Designed and Coded, by hand, by Ornette Coleman ©2024</p>
     </section>
