ADD image updates

--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
         <img src="./img/logos/logo-p_g-o.svg" alt="P&G" height="80">
       </li>
     </ul>
-    <section class="hero alt">
+    <section class="hero award">
       <div class="img"></div>
       <div class="text">
         <h2>Award winning digital</h2>
         <button>See More</button>
       </div>
     </section>
-    <section class="hero">
+    <section class="hero craft">
       <div class="img"></div>
       <div class="text">
         <h2>Creative Craft</h2>
