--- a/index.html
+++ b/index.html
@@ -9,13 +9,29 @@
 </head>
 <body>
   <nav>
-    <img src="./img/omnio_us-logo.png" alt="omnio.us">
+    <a href="./">
+      <img src="./img/omnio_us-logo.png" alt="omnio.us">
+    </a>
     <button class="menubtn">
       <div class="line"></div>
       <div class="line"></div>
       <div class="line"></div>
     </button>
-    <div class="menu-slideout"></div>
+    <div class="menu-slideout">
+      <section>
+        <ul class="links">
+          <li><a href="./digital.html">Digital</a></li>
+          <li><a href="./design.html">Design</a></li>
+          <li><a href="/">Art</a></li>
+          <li><a href="/">Sound</a></li>
+        </ul>
+        <ul class="social">
+          <li><a href="https://www.linkedin.com/in/ornettecoleman/" target="_blank"><img src="./img/icon/linkedin-op.svg" height="32" alt="LinkedIn"></a></li>
+          <li><a href="https://github.com/omniosi" target="_blank"><img src="./img/icon/github-op.svg" height="32" alt="GitHub"></a></li>
+          <li><a href="./files/resume_ornette-coleman_ux-engineer.pdf"><img src="./img/icon/file-op.svg" height="32" alt="Resume"></a></li>
+        </ul>
+      </section>
+    </div>
   </nav>
   <main>
     <section class="hero">
@@ -46,21 +62,21 @@
       <div class="img"></div>
       <div class="text">
         <h2>Award winning digital</h2>
-        <button>See More</button>
+        <a class="btn" href="./digital.html#psorigin">View this Project</a>
       </div>
     </section>
     <section class="hero craft">
       <div class="img"></div>
       <div class="text">
         <h2>Creative Craft</h2>
-        <!-- <button>See More</button> -->
+        <a class="btn" href="/">See More</a>
       </div>
     </section>
   </main>
   <footer>
     <ul class="buttons">
-      <li><a class="btn" href="/">design</a></li>
-      <li><a class="btn" href="/">code</a></li>
+      <li><a class="btn" href="./digital.html">digital</a></li>
+      <li><a class="btn" href="./design.html">design</a></li>
       <li><a class="btn" href="/">art</a></li>
       <li><a class="btn" href="/">sound</a></li>
     </ul>
